--- a/clips.html
+++ b/clips.html
@@ -4,6 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <title>Clips – Andrew Jones</title>
+  <!-- Google Font: Crimson Text -->
+<link
+  href="https://fonts.googleapis.com/css2?family=Crimson+Text:wght@400;600;700&display=swap"
+  rel="stylesheet"
+/>
+
   <link rel="stylesheet" href="CSS/style.css">
 </head>
 <body>
