--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <title>Andrew Jones – Home</title>
-  <!-- Google Fonts -->
+  <!-- Google Font: Crimson Text -->
 <link
-  href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;1,300;1,400&family=Montserrat:wght@400;500;700&display=swap"
+  href="https://fonts.googleapis.com/css2?family=Crimson+Text:wght@400;600;700&display=swap"
   rel="stylesheet"
 />
+
   <link rel="stylesheet" href="CSS/style.css">
 </head>
 <body>
